# 15721-s24-scheduler2

./: .gitignore  Cargo.toml  README.md  build.rs  download_tpch_data.sh  download_tpch_parquet_data.py  executor_timing_visualization.py  executors.toml  job_summary.json  project_metadata.json  project_proposal.md  query_timing_visualization.py
.github/workflows/: build.yml
benchmark/: query_timing_visualization.py
docs/: architecture_diagram.py  design_doc.md  project_proposal.md
examples/: Dockerfile
executor_logs/: 1.json  2.json  3.json  4.json  5.json
proto/: common.proto  optimizer_scheduler.proto  scheduler_executor.proto
src/: api.rs  composable_database.rs  dispatcher.rs  executor.rs  executor_client.rs  frontend.rs  integration_test.rs  intermediate_results.rs  lib.rs  main.rs  mock_catalog.rs  mock_executor.rs  mock_frontend.rs  mock_optimizer.rs  parser.rs  profiling.rs  project_config.rs  query_graph.rs  query_table.rs  queue.rs  reference_executor.rs  scheduler.rs  server.rs  substrait.rs  task.rs  task_queue.rs  tests.rs
src/api/: api-executor.rs  api-optimizer.rs
src/proto/: common.proto  optimizer_scheduler.proto  scheduler_api.proto
test_data/: customer.tbl  lineitem.tbl  nation.tbl  orders.tbl  part.tbl  partsupp.tbl  region.tbl  supplier.tbl
test_sql/: 1.sql  select.slt  test.sql  test_select.sql  test_select_multiple.sql
