[package]
name = "scheduler2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substrait = { version = "0.24.1", features = ["serde"] }
tonic = "0.11.0"
prost = "0.12.0"
tokio = {version = "1.36.0", features = ["full"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.113"
futures = "0.3"
datafusion-proto = "35.0.0"
datafusion = "35.0.0"
config = "0.14.0"
sqllogictest = "0.19.1"
async-trait = "0.1.77"
log = "0.4.20"
thiserror = "1.0.57"

[build-dependencies]
tonic-build = "0.11"
prost-build = {version = "0.12.0"}
