[package]
name = "scheduler2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
prost = "0.12.0"
tokio = {version = "1.36.0", features = ["full", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.113"
futures = "0.3"
datafusion-proto = "37.0.0"
datafusion = "37.0.0"
config = "0.14.0"
lazy_static = "1.4.0"
async-trait = "0.1.77"
log = "0.4.20"
thiserror = "1.0.57"
toml = "0.8.12"
walkdir = "2.5.0"
clap = "3.2.25"
once_cell = "1.19.0"
time = "0.3.34"
dashmap = "5.5.3"
sqlparser = "0.44.0"
difference = "2.0.0"
bytes = "1.5.0"
chrono = {version = "0.4.38", features = ["serde"]}

[build-dependencies]
tonic-build = "0.11"
